--- a/index.html
+++ b/index.html
@@ -88,6 +88,31 @@
         </div>
     </section>
 
+    <section id="testimonials" class="py-20 px-6 bg-teal-100">
+        <h2 class="text-4xl font-semibold text-teal-700 text-center">Lo que dicen nuestros clientes</h2>
+        <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="bg-white shadow-lg rounded-lg p-8 text-center">
+                <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
+                <p class="text-gray-600">"My daughter and I had an amazing tour with Petra. We had a tour of the highlights of the Prado followed by a tapas experience. She is incredibly knowledgeable and gave insights into art and history. The tapas were delicious and I felt that I had an immersion into Madrid that I would never have had without her. Highly recommend! Thank you for a wonderful day, Petra!"</p>
+                <p class="mt-4 font-semibold text-teal-600">Allegra Schorr</p>
+                <p class="text-gray-500">New York, USA</p>
+            </div>
+            <div class="bg-white shadow-lg rounded-lg p-8 text-center">
+                <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
+                <p class="text-gray-600">"We had a great day with Petra, learning so much about the contemporary socio-economic, cultural scene in Madrid - along with the history et al. Don't miss the Mercado De San Miguel!                    "</p>
+                <p class="mt-4 font-semibold text-teal-600">Betsy Teutsch</p>
+                <p class="text-gray-500">Mount Airy, Pennsylvania</p>
+            </div>
+            <div class="bg-white shadow-lg rounded-lg p-8 text-center">
+                <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
+                <p class="text-gray-600">"Our tour in Madrid far exceeded my expectations, largely due to Petra's extensive knowledge of history of Spain, the royals, arts.  It was a great pleasure to meet her and spend 3 hours touring with her on my first visit to Madrid!"</p>
+                <p class="mt-4 font-semibold text-teal-600">Rose Kelly</p>
+                <p class="text-gray-500">Philadelphia, Pennsylvania</p>
+            </div>
+        </div>
+    </section>
+    
+
     <section class="py-16 px-6 bg-white">
         <h2 class="text-3xl font-semibold text-teal-700 text-center">Descubre Madrid</h2>
         <div class="relative max-w-3xl mx-auto mt-8">
