--- a/index.html
+++ b/index.html
@@ -33,25 +33,38 @@
             font-weight: 600;
         }
     </style>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
 </head>
 
 <body class="bg-gray-50">
     <nav
         class="navbar fixed top-0 left-0 w-full bg-teal-700 text-white py-4 px-6 shadow-lg opacity-0 -translate-y-full z-10">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold dancing-script">Madrid by Petra</a>
+            <a href="#" class="text-2xl font-bold dancing-script" data-translate="title">Madrid by Petra</a>
             <ul class="hidden md:flex space-x-6">
-                <li><a href="#services" class="hover:text-teal-300 transition">Servicios</a></li>
-                <li><a href="#contact" class="hover:text-teal-300 transition">Contacto</a></li>
+                <li><a href="#services" class="hover:text-teal-300 transition" data-translate="services">Servicios</a>
+                </li>
+                <li><a href="#testimonials" class="hover:text-teal-300 transition"
+                        data-translate="testimonials">Testimonials</a></li>
+                <li><a href="#contact" class="hover:text-teal-300 transition" data-translate="contact">Contacto</a></li>
             </ul>
             <button id="menu-btn" class="md:hidden text-white text-2xl focus:outline-none">
                 <i class="fas fa-bars"></i>
             </button>
+            <!-- Language switcher -->
+            <div class="flex items-center space-x-4">
+                <button id="lang-es" class="text-white">ES</button>
+                <button id="lang-en" class="text-white">EN</button>
+            </div>
         </div>
         <div id="mobile-menu" class="mobile-menu absolute top-full left-0 w-full bg-teal-700 text-white py-4">
             <ul class="text-center">
-                <li><a href="#services" class="block py-2 hover:bg-teal-800">Servicios</a></li>
-                <li><a href="#contact" class="block py-2 hover:bg-teal-800">Contacto</a></li>
+                <li><a href="#services" class="block py-2 hover:bg-teal-800" data-translate="services">Servicios</a>
+                </li>
+                <li><a href="#testimonials" class="hover:text-teal-300 transition"
+                        data-translate="testimonials">Testimonials</a></li>
+                <li><a href="#contact" class="block py-2 hover:bg-teal-800" data-translate="contact">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -60,61 +73,76 @@
         style="background-image: url('header.jpg');">
         <div class="absolute inset-0 bg-black bg-opacity-50"></div>
         <div class="relative text-center">
-            <h1 class="text-5xl font-bold">Madrid by Petra</h1>
-            <p class="mt-2 text-xl">Descubre Madrid con una guía experta</p>
+            <h1 class="text-5xl font-bold" data-translate="title-main">Madrid by Petra</h1>
+            <p class="mt-2 text-xl" data-translate="discover">Descubre Madrid con una guía experta</p>
             <a href="#services"
-                class="mt-6 inline-block bg-teal-500 text-white py-3 px-6 rounded-lg text-lg transition duration-300 ease-in-out hover:bg-teal-400">Explora</a>
+                class="mt-6 inline-block bg-teal-500 text-white py-3 px-6 rounded-lg text-lg transition duration-300 ease-in-out hover:bg-teal-400"
+                data-translate="explore">Explora</a>
         </div>
     </section>
 
     <section id="services" class="py-20 px-6 text-center bg-white">
-        <h2 class="text-4xl font-semibold text-teal-700">Nuestros Servicios</h2>
+        <h2 class="text-4xl font-semibold text-teal-700" data-translate="our-services">Nuestros Servicios</h2>
         <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             <div class="bg-gray-100 shadow-lg rounded-lg p-8 transition transform hover:-translate-y-2 hover:shadow-xl">
                 <i class="fas fa-history text-teal-600 text-5xl mb-4"></i>
-                <h3 class="text-2xl font-semibold text-teal-600">Tours Históricos</h3>
-                <p class="text-gray-600 mt-3">Explora la historia de Madrid con recorridos guiados únicos.</p>
+                <h3 class="text-2xl font-semibold text-teal-600" data-translate="historic-tours">Tours Históricos</h3>
+                <p class="text-gray-600 mt-3" data-translate="historic-desc">Explora la historia de Madrid con
+                    recorridos guiados únicos.</p>
             </div>
             <div class="bg-gray-100 shadow-lg rounded-lg p-8 transition transform hover:-translate-y-2 hover:shadow-xl">
                 <i class="fas fa-utensils text-teal-600 text-5xl mb-4"></i>
-                <h3 class="text-2xl font-semibold text-teal-600">Experiencia Gastronómica</h3>
-                <p class="text-gray-600 mt-3">Disfruta de la auténtica cocina madrileña con expertos locales.</p>
+                <h3 class="text-2xl font-semibold text-teal-600" data-translate="gastronomy-experience">Experiencia
+                    Gastronómica</h3>
+                <p class="text-gray-600 mt-3" data-translate="gastronomy-desc">Disfruta de la auténtica cocina madrileña
+                    con expertos locales.</p>
             </div>
             <div class="bg-gray-100 shadow-lg rounded-lg p-8 transition transform hover:-translate-y-2 hover:shadow-xl">
                 <i class="fas fa-music text-teal-600 text-5xl mb-4"></i>
-                <h3 class="text-2xl font-semibold text-teal-600">Eventos y Cultura</h3>
-                <p class="text-gray-600 mt-3">Descubre conciertos, festivales y espectáculos en Madrid.</p>
+                <h3 class="text-2xl font-semibold text-teal-600" data-translate="events-culture">Eventos y Cultura</h3>
+                <p class="text-gray-600 mt-3" data-translate="events-desc">Descubre conciertos, festivales y
+                    espectáculos en Madrid.</p>
             </div>
         </div>
     </section>
 
     <section id="testimonials" class="py-20 px-6 bg-teal-100">
-        <h2 class="text-4xl font-semibold text-teal-700 text-center">Lo que dicen nuestros clientes</h2>
+        <h2 class="text-4xl font-semibold text-teal-700 text-center" data-translate="testimonials-title">Lo que dicen
+            nuestros clientes</h2>
         <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             <div class="bg-white shadow-lg rounded-lg p-8 text-center">
                 <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
-                <p class="text-gray-600">"My daughter and I had an amazing tour with Petra. We had a tour of the highlights of the Prado followed by a tapas experience. She is incredibly knowledgeable and gave insights into art and history. The tapas were delicious and I felt that I had an immersion into Madrid that I would never have had without her. Highly recommend! Thank you for a wonderful day, Petra!"</p>
-                <p class="mt-4 font-semibold text-teal-600">Allegra Schorr</p>
-                <p class="text-gray-500">New York, USA</p>
+                <p class="text-gray-600" data-translate="testimonial-1">"My daughter and I had an amazing tour with
+                    Petra. We had a tour of the highlights of the Prado followed by a tapas experience. She is
+                    incredibly knowledgeable and gave insights into art and history. The tapas were delicious and I felt
+                    that I had an immersion into Madrid that I would never have had without her. Highly recommend! Thank
+                    you for a wonderful day, Petra!"</p>
+                <p class="mt-4 font-semibold text-teal-600" data-translate="testimonial-name-1">Allegra Schorr</p>
+                <p class="text-gray-500" data-translate="testimonial-location-1">New York, USA</p>
             </div>
             <div class="bg-white shadow-lg rounded-lg p-8 text-center">
                 <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
-                <p class="text-gray-600">"We had a great day with Petra, learning so much about the contemporary socio-economic, cultural scene in Madrid - along with the history et al. Don't miss the Mercado De San Miguel!                    "</p>
-                <p class="mt-4 font-semibold text-teal-600">Betsy Teutsch</p>
-                <p class="text-gray-500">Mount Airy, Pennsylvania</p>
+                <p class="text-gray-600" data-translate="testimonial-2">"We had a great day with Petra, learning so much
+                    about the contemporary socio-economic, cultural scene in Madrid - along with the history et al.
+                    Don't miss the Mercado De San Miguel!"</p>
+                <p class="mt-4 font-semibold text-teal-600" data-translate="testimonial-name-2">Betsy Teutsch</p>
+                <p class="text-gray-500" data-translate="testimonial-location-2">Mount Airy, Pennsylvania</p>
             </div>
             <div class="bg-white shadow-lg rounded-lg p-8 text-center">
                 <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
-                <p class="text-gray-600">"Our tour in Madrid far exceeded my expectations, largely due to Petra's extensive knowledge of history of Spain, the royals, arts.  It was a great pleasure to meet her and spend 3 hours touring with her on my first visit to Madrid!"</p>
-                <p class="mt-4 font-semibold text-teal-600">Rose Kelly</p>
-                <p class="text-gray-500">Philadelphia, Pennsylvania</p>
+                <p class="text-gray-600" data-translate="testimonial-3">"Our tour in Madrid far exceeded my
+                    expectations, largely due to Petra's extensive knowledge of history of Spain, the royals, arts. It
+                    was a great pleasure to meet her and spend 3 hours touring with her on my first visit to Madrid!"
+                </p>
+                <p class="mt-4 font-semibold text-teal-600" data-translate="testimonial-name-3">Rose Kelly</p>
+                <p class="text-gray-500" data-translate="testimonial-location-3">Philadelphia, Pennsylvania</p>
             </div>
         </div>
     </section>
-    
 
     <section class="py-16 px-6 bg-white">
-        <h2 class="text-3xl font-semibold text-teal-700 text-center">Descubre Madrid</h2>
+        <h2 class="text-3xl font-semibold text-teal-700 text-center" data-translate="carousel-title">Descubre Madrid
+        </h2>
         <div class="relative max-w-3xl mx-auto mt-8">
             <!-- Carousel Container -->
             <div class="overflow-hidden relative rounded-lg">
@@ -139,15 +167,17 @@
         </div>
     </section>
 
-
     <section id="contact" class="py-20 px-6 text-center bg-gray-200">
-        <h2 class="text-4xl font-semibold text-teal-700">Contacto</h2>
-        <p class="mt-4 text-gray-600">Manuela Malasaña, Madrid, España</p>
-        <p class="text-gray-600">Teléfono: <a href="tel:+34617909280" class="text-teal-600 underline">+34 617 90 92
-                80</a></p>
-        <p class="text-gray-600">Email: <a href="mailto:petrapim@gmail.com"
-                class="text-teal-600 underline">petrapim@gmail.com</a></p>
+        <h2 class="text-4xl font-semibold text-teal-700" data-translate="contact-title">Contacto</h2>
+        <p class="mt-4 text-gray-600 mb-2" data-translate="address">Manuela Malasaña, Madrid, España</p>
+        <p class="text-gray-600" data-translate="phone-label">Teléfono:</p>
+        <a href="tel:+34617909280" class="text-teal-600 underline">+34 617 90 92 80</a>
+        <p class="text-gray-600 mt-2" data-translate="">Email:</p>
+        <a href="mailto:petrapim@gmail.com" class="text-teal-600 underline">petrapim@gmail.com</a>
     </section>
+
+
+    <!-- Carousel Script -->
     <script>
         const carousel = document.getElementById("carousel");
         const images = carousel.children;
@@ -176,6 +206,7 @@
         }, 3000);
     </script>
 
+    <!-- NAV Hamburguer Script (Display Mobile Menu)-->
     <script>
         window.addEventListener("scroll", function () {
             const navbar = document.querySelector(".navbar");
@@ -191,6 +222,171 @@
             menu.style.display = menu.style.display === "block" ? "none" : "block";
         });
     </script>
+
+    <!-- Translation Script -->
+    <script>
+        // Define translations
+        const translations = {
+            "title": {
+                "es": "Madrid by Petra",
+                "en": "Madrid by Petra"
+            },
+            "services": {
+                "es": "Servicios",
+                "en": "Services"
+            },
+            "testimonials": {
+                "es": "Testimonios",
+                "en": "Testimonials"
+            },
+            "contact": {
+                "es": "Contacto",
+                "en": "Contact Us"
+            },
+            "explore": {
+                "es": "Explora",
+                "en": "Explore"
+            },
+            "our-services": {
+                "es": "Nuestros Servicios",
+                "en": "Our Services"
+            },
+            "historic-tours": {
+                "es": "Tours Históricos",
+                "en": "Historic Tours"
+            },
+            "historic-desc": {
+                "es": "Explora la historia de Madrid con recorridos guiados únicos.",
+                "en": "Explore Madrid’s history with unique guided tours."
+            },
+            "gastronomy-experience": {
+                "es": "Experiencia Gastronómica",
+                "en": "Gastronomic Experience"
+            },
+            "gastronomy-desc": {
+                "es": "Disfruta de la auténtica cocina madrileña con expertos locales.",
+                "en": "Enjoy authentic Madrid cuisine with local experts."
+            },
+            "events-culture": {
+                "es": "Eventos y Cultura",
+                "en": "Events & Culture"
+            },
+            "events-desc": {
+                "es": "Descubre conciertos, festivales y espectáculos en Madrid.",
+                "en": "Discover concerts, festivals, and shows in Madrid."
+            },
+            "testimonials-title": {
+                "es": "Lo que dicen nuestros clientes",
+                "en": "What our clients say"
+            },
+            "testimonial-1": {
+                "es": "\"Mi hija y yo tuvimos una visita increíble con Petra. Hicimos un recorrido por lo más destacado del Prado seguido de una experiencia de tapas. Ella tiene un conocimiento increíble y nos dio perspectivas únicas sobre el arte y la historia. Las tapas estaban deliciosas y sentí que viví una inmersión en Madrid que nunca habría tenido sin ella. ¡Altamente recomendable! ¡Gracias por un día maravilloso, Petra!\"",
+                "en": "\"My daughter and I had an amazing tour with Petra. We had a tour of the highlights of the Prado followed by a tapas experience. She is incredibly knowledgeable and gave insights into art and history. The tapas were delicious and I felt that I had an immersion into Madrid that I would never have had without her. Highly recommend! Thank you for a wonderful day, Petra!\""
+            },
+            "testimonial-name-1": {
+                "es": "Allegra Schorr",
+                "en": "Allegra Schorr"
+            },
+            "testimonial-location-1": {
+                "es": "Nueva York, EE.UU.",
+                "en": "New York, USA"
+            },
+            "testimonial-2": {
+                "es": "\"Pasamos un día genial con Petra, aprendiendo mucho sobre la escena socioeconómica y cultural contemporánea de Madrid, junto con su historia y mucho más. ¡No se pierdan el Mercado de San Miguel!\"",
+                "en": "\"We had a great day with Petra, learning so much about the contemporary socio-economic, cultural scene in Madrid - along with the history et al. Don't miss the Mercado De San Miguel!\""
+            },
+            "testimonial-name-2": {
+                "es": "Betsy Teutsch",
+                "en": "Betsy Teutsch"
+            },
+            "testimonial-location-2": {
+                "es": "Mount Airy, Pennsylvania",
+                "en": "Mount Airy, Pennsylvania"
+            },
+            "testimonial-3": {
+                "es": "\"Nuestro tour en Madrid superó con creces mis expectativas, en gran parte gracias al amplio conocimiento de Petra sobre la historia de España, la realeza y el arte. ¡Fue un verdadero placer conocerla y pasar tres horas recorriendo con ella en mi primera visita a Madrid!\"",
+                "en": "\"Our tour in Madrid far exceeded my expectations, largely due to Petra's extensive knowledge of history of Spain, the royals, arts.  It was a great pleasure to meet her and spend 3 hours touring with her on my first visit to Madrid!\""
+            },
+            "testimonial-name-3": {
+                "es": "Emily Lattner",
+                "en": "Emily Lattner"
+            },
+            "testimonial-location-3": {
+                "es": "Washington, DC",
+                "en": "Washington, DC"
+            },
+            "carousel-title": {
+                "es": "Descubre Madrid",
+                "en": "Discover Madrid"
+            },
+            "contact-title": {
+                "es": "Contácto",
+                "en": "Contact Us"
+            },
+            "name-label": {
+                "es": "Nombre",
+                "en": "Name"
+            },
+            "phone-label": {
+                "es": "Teléfono",
+                "en": "Phone"
+            },
+            "message-label": {
+                "es": "Mensaje",
+                "en": "Message"
+            },
+            "send-message": {
+                "es": "Enviar mensaje",
+                "en": "Send message"
+            },
+            "title-main": {
+                "es": "Madrid by Petra",
+                "en": "Madrid by Petra"
+            },
+            "discover": {
+                "es": "Descubre Madrid con una guía experta",
+                "en": "Discover Madrid with an expert guide"
+            }
+        };
+
+        function translatePage(language) {
+            document.querySelectorAll('[data-translate]').forEach(element => {
+                const key = element.getAttribute('data-translate');
+                if (translations[key] && translations[key][language]) {
+                    element.textContent = translations[key][language];
+                }
+            });
+        }
+
+        // Set default language to Spanish
+        translatePage('es');
+
+        document.getElementById("lang-es").addEventListener("click", function () {
+            translatePage('es');
+        });
+
+        document.getElementById("lang-en").addEventListener("click", function () {
+            translatePage('en');
+        });
+
+        // Navbar sticky on scroll
+        window.addEventListener('scroll', function () {
+            const navbar = document.querySelector('.navbar');
+            if (window.scrollY > 0) {
+                navbar.classList.add('opacity-100', 'translate-y-0');
+            } else {
+                navbar.classList.remove('opacity-100', 'translate-y-0');
+            }
+        });
+
+        // Mobile menu toggle
+        document.getElementById('menu-btn').addEventListener('click', function () {
+            document.getElementById('mobile-menu').classList.toggle('max-h-96');
+            document.getElementById('mobile-menu').classList.toggle('max-h-0');
+        });
+    </script>
+
+
 </body>
 
 </html>
