Added WhatsApp Button

--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
         <a href="mailto:petrapim@gmail.com" class="text-teal-600 underline">petrapim@gmail.com</a>
     </section>
 
+    <!-- WhatsApp Floating Button -->
+    <a href="https://wa.me/34617909280" target="_blank"
+        class="fixed bottom-6 right-6 bg-green-500 text-white rounded-full shadow-lg p-4 z-50 hover:bg-green-600 transition duration-300">
+        <i class="fab fa-whatsapp text-2xl"></i>
+    </a>
 
     <!-- Carousel Script -->
     <script>
