Background Image blur

--- a/index.html
+++ b/index.html
@@ -79,16 +79,17 @@
     </nav>
 
     <section class="relative w-full h-screen flex items-center justify-center bg-cover bg-center text-white"
-        style="background-image: url('header.jpg');">
-        <div class="absolute inset-0 bg-black bg-opacity-50"></div>
-        <div class="relative text-center">
-            <h1 class="text-5xl font-bold" data-translate="title-main">Madrid by Petra</h1>
-            <p class="mt-2 text-xl" data-translate="discover">Descubre Madrid con una guía experta</p>
-            <a href="#services"
-                class="mt-6 inline-block bg-teal-500 text-white py-3 px-6 rounded-none text-lg transition duration-300 ease-in-out hover:bg-teal-400"
-                data-translate="explore">EXPLORA</a>
-        </div>
-    </section>
+    style="background-image: url('header.jpg');">
+    <div class="absolute inset-0 bg-black bg-opacity-50 backdrop-blur-sm"></div>
+    <div class="relative text-center">
+        <h1 class="text-5xl font-bold" data-translate="title-main">Madrid by Petra</h1>
+        <p class="mt-2 text-xl" data-translate="discover">Descubre Madrid con una guía experta</p>
+        <a href="#services"
+            class="mt-6 inline-block bg-teal-500 text-white py-3 px-6 rounded-none text-lg transition duration-300 ease-in-out hover:bg-teal-400"
+            data-translate="explore">EXPLORA</a>
+    </div>
+</section>
+
 
     <section id="services" class="py-20 px-6 text-center bg-white Container_containerlg__tE5_m">
         <h2 class="text-4xl font-semibold text-teal-700" data-translate="our-services">Nuestros Servicios</h2>
