--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
             <!-- Contact Info + Social -->
             <div class="md:col-span-2 space-y-4">
-                <p class="text-white" data-translate="address">Manuela Malasaña, Madrid, España</p>
+                <p class="text-white" data-translate="address">Madrid, España</p>
                 <p class="text-white" data-translate="phone-label">Teléfono:</p>
                 <a href="tel:+34617909280" class="text-teal-400 hover:underline">+34 617 90 92 80</a>
                 <p class="text-white mt-2">Email:</p>
