--- a/index.html
+++ b/index.html
@@ -187,6 +187,14 @@
                     <p class="text-gray-500" data-translate="testimonial-location-3">Philadelphia, Pennsylvania</p>
                 </div>
 
+                <!-- Testimonial Slide 4 -->
+                <div class="swiper-slide bg-white shadow-lg rounded-none p-8 text-center">
+                    <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
+                    <p class="text-gray-600" data-translate="testimonial-4">"Thanks again for a wonderful 2 days. We love your knowledge and your enthusiasm for Madrid!We really enjoyed traveling with you. And Segovia was great. Come for the acuaduct and stay for the castles and the beautiful scenery. Thanks again for making our trip so nice..."</p>
+                    <p class="mt-4 font-semibold text-teal-600" data-translate="testimonial-name-4">Alan & Peggy</p>
+                    <p class="text-gray-500" data-translate="testimonial-location-4"></p>
+                </div>
+
                 <!-- Article Excerpt Slide 1 -->
                 <div class="swiper-slide bg-white shadow-lg rounded-none p-8 text-left">
                     <div class="flex justify-center mb-4">
@@ -465,6 +473,18 @@
             "testimonial-location-3": {
                 "es": "Washington, DC",
                 "en": "Washington, DC"
+            },
+            "testimonial-4": {
+                "es": "\"Gracias de nuevo por dos días maravillosos. ¡Nos encanta tu conocimiento y tu entusiasmo por Madrid! Disfrutamos mucho viajando contigo. Y Segovia fue genial. Ven por el acueducto y quédate por los castillos y el hermoso paisaje. Gracias de nuevo por hacer que nuestro viaje fuera tan agradable.!\"",
+                "en": "\"Thanks again for a wonderful 2 days. We love your knowledge and your enthusiasm for Madrid!We really enjoyed traveling with you. And Segovia was great. Come for the acuaduct and stay for the castles and the beautiful scenery. Thanks again for making our trip so nice!\""
+            },
+            "testimonial-name-4": {
+                "es": "Alan & Peggy",
+                "en": "Alan & Peggy"
+            },
+            "testimonial-location-4": {
+                "es": "",
+                "en": ""
             },
             "testimonial-article-title-1": {
                 "es": "Todavía no me he cansado de la gente.",
