--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
     <nav
         class="navbar fixed top-0 left-0 w-full bg-teal-700 text-white py-4 px-6 shadow-lg opacity-0 -translate-y-full z-10">
         <div class="container mx-auto flex justify-between items-center">
+                        <button id="menu-btn" class="md:hidden text-white text-2xl focus:outline-none">
+                <i class="fas fa-bars"></i>
+            </button>
             <a href="#" class="text-2xl font-bold dancing-script" data-translate="title">Madrid by Petra</a>
             <ul class="hidden md:flex space-x-6">
                 <li><a href="#services" class="hover:text-teal-300 transition" data-translate="services">Servicios</a>
@@ -81,9 +84,7 @@
                         data-translate="testimonials">Testimonials</a></li>
                 <li><a href="#contact" class="hover:text-teal-300 transition" data-translate="contact">Contacto</a></li>
             </ul>
-            <button id="menu-btn" class="md:hidden text-white text-2xl focus:outline-none">
-                <i class="fas fa-bars"></i>
-            </button>
+
             <!-- Language switcher -->
             <div class="flex items-center space-x-4">
                 <button id="lang-es" class="text-white">ES</button>
@@ -110,15 +111,17 @@
                 Madrid by Petra
             </h1>
 
-            <p class="mt-4 text-xl md:text-2xl italic text-white animate-fade-in delay-300" data-translate="discover">
+            <p class="mt-4 text-xl md:text-2xl italic text-white animate-fade-in delay-300" data-aos="fade-up"
+                data-aos-duration="1000" data-translate="discover">
                 Descubre Madrid con una guía experta
             </p>
 
 
             <a href="#services"
-                class="mt-6 inline-flex items-center gap-2 cursor-pointer
+                class="mt-6 inline-flex items-center gap-2 cursor-pointer animate-fade-in delay-400 
                  bg-gradient-to-r from-teal-500 to-emerald-500 text-white py-3 px-8 rounded-full text-lg font-semibold shadow-lg hover:shadow-xl transform hover:-translate-y-1 transition-all duration-300"
-                data-translate="explore">
+                data-translate="explore" data-aos="fade-up"
+                data-aos-duration="1000">
                 <i class="fas fa-map-marked-alt"></i>
                 EXPLORA
             </a>
@@ -190,7 +193,10 @@
                 <!-- Testimonial Slide 4 -->
                 <div class="swiper-slide bg-white shadow-lg rounded-none p-8 text-center">
                     <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
-                    <p class="text-gray-600" data-translate="testimonial-4">"Thanks again for a wonderful 2 days. We love your knowledge and your enthusiasm for Madrid!We really enjoyed traveling with you. And Segovia was great. Come for the acuaduct and stay for the castles and the beautiful scenery. Thanks again for making our trip so nice..."</p>
+                    <p class="text-gray-600" data-translate="testimonial-4">"Thanks again for a wonderful 2 days. We
+                        love your knowledge and your enthusiasm for Madrid!We really enjoyed traveling with you. And
+                        Segovia was great. Come for the acuaduct and stay for the castles and the beautiful scenery.
+                        Thanks again for making our trip so nice..."</p>
                     <p class="mt-4 font-semibold text-teal-600" data-translate="testimonial-name-4">Alan & Peggy</p>
                     <p class="text-gray-500" data-translate="testimonial-location-4"></p>
                 </div>
@@ -200,7 +206,7 @@
                     <div class="flex justify-center mb-4">
                         <i class="fas fa-newspaper text-teal-600 text-3xl"></i>
                     </div>
-                    
+
                     <h3 class="text-xl font-semibold text-teal-700 mb-2" data-translate="testimonial-article-title-1">
                         "Still haven't had enough of these people"</h3>
                     <p class="text-gray-600 mb-4" data-translate="testimonial-article-content-1">Petra Pimminger has
@@ -219,7 +225,7 @@
                     <div class="flex justify-center mb-4">
                         <i class="fas fa-newspaper text-teal-600 text-3xl"></i>
                     </div>
-                    
+
                     <h3 class="text-xl font-semibold text-teal-700 mb-2" data-translate="testimonial-article-title-2">A
                         Culinary Journey Through Madrid</h3>
                     <p class="text-gray-600 mb-4" data-translate="testimonial-article-content-2">Join Petra on a
@@ -267,6 +273,7 @@
                         <img src="images/1.png" class="w-full object-cover" alt="Madrid 1">
                         <img src="images/2.png" class="w-full object-cover" alt="Madrid 2">
                         <img src="images/3.png" class="w-full object-cover" alt="Madrid 3">
+                        <img src="images/4.png" class="w-full object-cover" alt="Madrid 4">
                     </div>
                 </div>
 
@@ -308,7 +315,8 @@
                 <p class="text-white" data-translate="phone-label">Teléfono:</p>
                 <a href="tel:+34617909280" class="text-teal-400 hover:underline">+34 617 90 92 80</a>
                 <p class="text-white mt-2">Email:</p>
-                <a href="mailto:petrapim@gmail.com" class="text-teal-400 hover:underline">petrapim@gmail.com</a>
+                <a href="mailto:petra@madridbypetra.com"
+                    class="text-teal-400 hover:underline">petra@madridbypetra.com</a>
 
                 <!-- Social Media -->
                 <div class="flex gap-6 pt-4 text-2xl">
