Added inicio to nav

--- a/experiencia-gastronomica.html
+++ b/experiencia-gastronomica.html
@@ -48,6 +48,8 @@
         <div id="mobile-menu" class="mobile-menu absolute top-full left-0 w-full bg-teal-700 text-white py-4"
             style="display: none;">
             <ul class="text-center">
+				<li><a href="index.html" class="hover:text-teal-300 transition"
+                        data-translate="inicio">Inicio</a></li>
                 <li><a href="tours-historicos.html" class="hover:text-teal-300 transition"
                         data-translate="historic-tours">Tours Históricos</a></li>
                 <li><a href="experiencia-gastronomica.html" class="hover:text-teal-300 transition"
