--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <div id="mobile-menu" class="mobile-menu absolute top-full left-0 w-full bg-teal-700 text-white py-4"
             style="display: none;">
             <ul class="text-center">
+                <li><a href="index.html" class="hover:text-teal-300 transition" data-translate="inicio">Inicio</a></li>
                 <li><a href="tours-historicos.html" class="hover:text-teal-300 transition"
                         data-translate="historic-tours">Tours Históricos</a></li>
                 <li><a href="experiencia-gastronomica.html" class="hover:text-teal-300 transition"
@@ -61,7 +62,7 @@
             </ul>
         </div>
     </nav>
-    
+
     <section class="relative w-full h-screen flex items-center justify-center bg-cover bg-center text-white"
         style="background-image: url('images/header.jpg');">
         <div class="absolute inset-0 bg-black bg-opacity-50 backdrop-blur-sm"></div>
