Added VAT ID to footer

--- a/index.html
+++ b/index.html
@@ -302,7 +302,6 @@
 
             <!-- Contact Info + Social -->
             <div class="md:col-span-2 space-y-4">
-                <p class="text-white" data-translate="address">Madrid, España</p>
                 <p class="text-white" data-translate="phone-label">Teléfono:</p>
                 <a href="tel:+34617909280" class="text-teal-400 hover:underline">+34 617 90 92 80</a>
                 <p class="text-white mt-2">Email:</p>
@@ -323,9 +322,26 @@
             </div>
         </div>
     </section>
-    <footer class="bg-teal-700 text-white py-6 text-center text-sm">
-        <p>&copy; 2025 Madrid by Petra. Diseñado por <a href="http://selekode.github.io/SeanLeitch"><span>Sean
-                    Leitch</span></a></p>
+    <footer class="bg-teal-700 text-white py-6 text-sm">
+        <div
+            class="container mx-auto px-4 flex flex-col md:flex-row justify-between items-center text-center md:text-left">
+            <!-- Left: Copyright -->
+            <div class="mb-4 md:mb-0">
+                <p>&copy; 2025 Petra Pimminger. Diseñado por
+                    <a href="http://selekode.github.io/SeanLeitch" class="underline hover:text-teal-300">
+                        <span>Sean Leitch</span>
+                    </a>
+                </p>
+            </div>
+            <!-- Right: Domicilio Fiscal -->
+            <div class="text-xs">
+                <p><strong>Petra Pimminger</strong></p>
+                <p>Jupitergasse 4</p>
+                <p>4407 Dietach, Austria</p>
+                <p><b>VAT ID:</b> ATU77354168</p>
+
+            </div>
+        </div>
     </footer>
 
     <!-- WhatsApp Floating Button -->
