--- a/experiencia-gastronomica.html
+++ b/experiencia-gastronomica.html
@@ -177,9 +177,26 @@
             </div>
         </div>
     </section>
-    <footer class="bg-teal-700 text-white py-6 text-center text-sm">
-        <p>&copy; 2025 Madrid by Petra. Diseñado por <a href="http://selekode.github.io/SeanLeitch"><span>Sean
-                    Leitch</span></a></p>
+    <footer class="bg-teal-700 text-white py-6 text-sm">
+        <div
+            class="container mx-auto px-4 flex flex-col md:flex-row justify-between items-center text-center md:text-left">
+            <!-- Left: Copyright -->
+            <div class="mb-4 md:mb-0">
+                <p>&copy; 2025 Petra Pimminger. Diseñado por
+                    <a href="http://selekode.github.io/SeanLeitch" class="underline hover:text-teal-300">
+                        <span>Sean Leitch</span>
+                    </a>
+                </p>
+            </div>
+            <!-- Right: Domicilio Fiscal -->
+            <div class="text-xs">
+                <p><strong>Petra Pimminger</strong></p>
+                <p>Jupitergasse 4</p>
+                <p>4407 Dietach, Austria</p>
+                <p><b>VAT ID:</b> ATU77354168</p>
+
+            </div>
+        </div>
     </footer>
 
 
