--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
 </head>
 
 <body class="bg-[#F6F5F4]">
+    <div id="under-construction-popup" class="fixed inset-0 bg-black/60 flex items-center justify-center z-50">
+        <div class="bg-white rounded-lg shadow-xl p-6 max-w-md text-center">
+            <div class="text-5xl mb-3">🚧</div>
+
+            <h2 class="text-xl font-semibold text-teal-700 mb-2">Sitio en construcción</h2>
+            <p class="text-gray-700 mb-4">
+                Estamos trabajando para mejorar tu experiencia. Algunas secciones pueden estar incompletas.
+            </p>
+            <button id="close-popup" class="bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700 transition">
+                Entendido
+            </button>
+        </div>
+    </div>
+
     <nav
         class="navbar fixed top-0 left-0 w-full bg-teal-700 text-white py-4 px-6 shadow-lg opacity-0 -translate-y-full z-10">
         <div class="container mx-auto flex justify-between items-center">
@@ -372,6 +386,11 @@
         class="fixed bottom-6 right-6 w-14 h-14 bg-green-500 text-white rounded-full shadow-lg flex items-center justify-center z-50 hover:bg-green-600 transition duration-300">
         <i class="fab fa-whatsapp text-2xl"></i>
     </a>
+    <script>
+        document.getElementById("close-popup").addEventListener("click", () => {
+            document.getElementById("under-construction-popup").style.display = "none";
+        });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/translate.js"></script>
